manifests/service.yml
apiVersion: v1
kind: Service
metadata:
    name: api-palabras-contar-repeticiones
spec:
    type: ClusterIP
    ports:
    - port: 80 
    selector:
        app: api-palabras-contar-repeticiones
